# sensor-sht

./: CMakeLists.txt  Makefile  sht_git_version.c  shtc1.c
